# LoPA

./: .gitignore  README.md  pyproject.toml
lopa_dist_nv/: generate_branch_parallel.py  launch_all.sh  test_lopa_dist_nv_dream.sh
lopa_dist_nv/model_cache/dream/: configuration_dream.py  model_dream_bp.py  parallel_utils.py
lopa_dist_nv/utils/: compile_control.py  eval_dream_stat.py
scale_diffucoder_d2f/: generate.py  model.py  test_diffucoder_d2f_humaneval.sh  test_diffucoder_d2f_mbpp.sh  test_diffucoder_lopa_humaneval.sh  test_diffucoder_lopa_mbpp.sh
scale_diffucoder_d2f/model_cache/dream/: model_dream.py
scale_dream_d2f/: eval_dream7.sh  postprocess_code.py  scale_dream_d2f.py
scale_dream_d2f/model_cache/dream/: model_dream.py
